# learning-experiments

./: .clineignore  .gitignore  HUMANS.md  README.md  pyproject.toml
.clinerules/: global.md  pythonContext.md
.clinerules/workflows/: do-single-task.md
memory-bank/: progress.md  projectArchitecture.md
outputs/: backprop_from_scratch_output.txt  gradient_descent_demo_output.txt
scripts/: README_fabric_hydra.md  backprop_from_scratch.py  config.yaml  gradient_descent_demo.py  lenet_mnist_fabric_hydra.py  lenet_mnist_training.py
scripts/configs/: config.yaml
scripts/configs/model/: lenet5.yaml
scripts/configs/training/: default.yaml  fast.yaml
scripts/outputs/2025-06-12/09-31-07/.hydra/: hydra.yaml
scripts/outputs/2025-06-12/09-32-01/.hydra/: config.yaml  hydra.yaml  overrides.yaml
scripts/outputs/2025-06-12/09-33-02/.hydra/: config.yaml  hydra.yaml  overrides.yaml
scripts/outputs/2025-06-12/09-33-19/.hydra/: config.yaml  hydra.yaml  overrides.yaml
scripts/outputs/2025-06-12/09-34-18/.hydra/: hydra.yaml  overrides.yaml
src/learning_experiments/: __init__.py
tests/: test_gradient_descent.py  test_optimization_path_visualization.py
